--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 	"devDependencies": {
 		"@iconify-json/carbon": "^1.2.4",
 		"@riadh-adrani/utils": "^1.0.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-auto": "^3.2.5",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.8.1",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
 		"@types/node": "^24.0.11",
@@ -46,8 +46,8 @@
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
-		"unocss": "^0.64.1",
-		"vite": "^5.0.3"
+		"unocss": "0.65.4",
+		"vite": "^5.4.8"
 	},
 	"dependencies": {
 		"@emailjs/browser": "^4.4.1",
@@ -57,5 +57,9 @@
 		"@iconify-json/noto": "^1.2.3",
 		"@iconify-json/twemoji": "^1.2.2",
 		"vara": "^1.4.1"
+	},
+	"overrides": {
+		"cookie": "^0.7.0",
+		"esbuild": "^0.25.0"
 	}
 }
